--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -149,6 +149,7 @@ jobs:
   lint:
     name: Run lint
     runs-on: ubuntu-latest
+    if: ${{ inputs.code_lang != 'java' }}
     steps:
       - name: Setup ${{ inputs.code_lang }}
         uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
@@ -243,7 +244,7 @@ jobs:
       - unit-test
       - integration-test
     runs-on: [self-hosted, linux,  main, deployment]
-    if: ${{ (inputs.code_lang == 'node' && needs.lint.result == 'success') || success() }}
+    if: ${{ (inputs.code_lang == 'java') || (inputs.code_lang == 'node' && needs.lint.result == 'success') || success() }}
     env:
       GOPROXY: https://nexus.mydime.tech/repository/go-proxy,direct
     container:
@@ -262,7 +263,7 @@ jobs:
           target_ref: ${{ inputs.target_ref }}
       - name: Build and push docker image
         id: build
-        uses: kkp-dfs/dime-github-actions-workflows/docker-build-push@main
+        uses: kkp-dfs/dime-github-actions-workflows/docker-build-push@build-deploy-workflow
         with:
           repository: ${{ needs.setup.outputs.ecr_repository }}
           token: ${{ needs.setup.outputs.ecr_token }}
@@ -285,7 +286,7 @@ jobs:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
       - name: Apply Dime ArgoCD Application Helm
-        uses: kkp-dfs/dime-github-actions-workflows/deploy-app@main
+        uses: kkp-dfs/dime-github-actions-workflows/deploy-app@build-deploy-workflow
         with:
           environment: sit
           release_name: ${{ inputs.application_name }}-${{ needs.setup.outputs.ref }}
@@ -316,7 +317,7 @@ jobs:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
       - name: Apply Dime ArgoCD Application Helm
-        uses: kkp-dfs/dime-github-actions-workflows/deploy-app@main
+        uses: kkp-dfs/dime-github-actions-workflows/deploy-app@build-deploy-workflow
         with:
           environment: sit
           release_name: ${{ inputs.application_name }}-sit
