--- a/.github/workflows/dime-build-deploy.yml
+++ b/.github/workflows/dime-build-deploy.yml
@@ -200,7 +200,7 @@ jobs:
           target_ref: ${{ inputs.target_ref }}
       - name: Build and push docker image
         id: build
-        uses: kkp-dfs/dime-github-actions-workflows/docker-build-push@build-deploy-workflow
+        uses: kkp-dfs/dime-github-actions-workflows/docker-build-push@main
         with:
           application_name: ${{ inputs.application_name }}
           repository: ${{ needs.setup.outputs.ecr_repository }}
@@ -224,7 +224,7 @@ jobs:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
       - name: Apply Dime ArgoCD Application Helm
-        uses: kkp-dfs/dime-github-actions-workflows/deploy-app@build-deploy-workflow
+        uses: kkp-dfs/dime-github-actions-workflows/deploy-app@main
         with:
           environment: ${{ inputs.environment }}
           release_name: ${{ needs.setup.outputs.release_name }}
