--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -137,7 +137,7 @@ jobs:
           if [ "${{ inputs.event_name }}" == "pull_request" ]; then
             HOST=$(echo "${{ inputs.hostname }}" | sed -E 's/^[a-z0-9_\-]+\.(.+)$/${{ inputs.application_name }}-pr-${{ inputs.event_number }}.\1/i')
           elif [ "${REF_NAME}" != "main" ]; then
-            HOST=$(echo "${{ inputs.hostname }}" | sed -E 's/^[a-z0-9_\-]+\.(.+)$/${{ inputs.application_name }}-refs-${REF_NAME}.\1/i')
+            HOST=$(echo "${{ inputs.hostname }}" | sed -E 's/^[a-z0-9_\-]+\.(.+)$/${{ inputs.application_name }}-refs-'${REF_NAME}'.\1/i')
           elif [[ ! -z "${{ inputs.additional_hostnames }}" ]]; then
             HOST=${{ inputs.hostname }},${{ inputs.additional_hostnames }}
           else
