--- a/db-migration/action.yaml
+++ b/db-migration/action.yaml
@@ -43,7 +43,7 @@ runs:
         git clone https://github.com/kkp-dfs/dime-helm.git
         cd dime-helm
         git fetch
-        git checkout -b ${{ inputs.helm_ref }}
+        git reset ${{ inputs.helm_ref }} --hard
 
         yaml-merge values/${{ inputs.application_name }}/values.yaml values/${{ inputs.application_name }}/values-${{ inputs.environment }}.yaml > values.yaml
         VAULT_USERNAME=$(cat values.yaml | yq eval '.application.values.secrets.default.data.DB_USERNAME' - | sed -e 's/vault:/https:\/\/vault.mydime.tech\/v1\//g')
