--- a/.github/workflows/dag-deploy.yml
+++ b/.github/workflows/dag-deploy.yml
@@ -45,43 +45,12 @@ jobs:
       volumes:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
-      - uses: kkp-dfs/dime-github-actions-workflows/common@main
+      - uses: kkp-dfs/dime-github-actions-workflows/deploy-dags@main
         with:
+          environment: ${{ inputs.environment }}
+          helm_ref: ${{ inputs.helm_ref }}
+          cluster: ${{ inputs.cluster }}
+          namespace: ${{ inputs.namespace }}
+          repository: ${{ inputs.repository }}
+          ref_name: ${{ inputs.ref_name }}
           gh_access_token: ${{ secrets.gh_access_token }}
-      - name: Checkout helm
-        run: git clone https://github.com/kkp-dfs/dime-helm.git
-      - name: Setup kubernetes context
-        shell: bash
-        env:
-          SERVICEACCOUNT: /var/run/secrets/kubernetes.io/serviceaccount
-        run: |
-          export NAMESPACE=$(cat ${SERVICEACCOUNT}/namespace)
-          kubectl config set-credentials eks-account --token=$(cat ${SERVICEACCOUNT}/token)
-          kubectl config set-cluster eks --server=https://kubernetes.default.svc --certificate-authority=${SERVICEACCOUNT}/ca.crt
-          kubectl config set-context default --cluster=eks --user=eks-account --namespace=$NAMESPACE
-          kubectl config use-context default
-      - name: Deploy job
-        shell: bash
-        run: |
-          REPOSITORY="${{ inputs.repository }}"
-          RELEASE_NAME=${REPOSITORY/"kkp-dfs/"/}
-          RELEASE_NAME=${RELEASE_NAME//_/-}
-
-          if [ $(helm ls -A -f "${RELEASE_NAME}-${{ inputs.environment }}" -o json | jq -r '. | length') -gt "0" ]; then
-            kubectl patch -n argocd app ${RELEASE_NAME}-${{ inputs.environment }} -p '{"metadata": {"finalizers": ["resources-finalizer.argocd.argoproj.io"]}}' --type merge
-            kubectl delete -n argocd app ${RELEASE_NAME}-${{ inputs.environment }} --wait
-            sleep 5
-          fi
-
-          helm upgrade -i ${RELEASE_NAME}-${{ inputs.environment }} dime-helm/charts/dime-application \
-          -f dime-helm/values/airflow-dags/values.yaml \
-          -f dime-helm/values/airflow-dags/values-${{ inputs.environment }}.yaml \
-          --set "fullnameOverride=${RELEASE_NAME}" \
-          --set "nameOverride=${RELEASE_NAME}" \
-          --set "source.username=${{ secrets.gh_access_token }}" \
-          --set "source.password=x-oauth-basic" \
-          --set "destination.cluster=${{ inputs.cluster_prefix }}-${{ inputs.environment }}" \
-          --set "destination.namespace=${{ inputs.namespace }}" \
-          --set "application.values.configmaps.default.data.DAGS_REPO=${{ inputs.repository }}" \
-          --set "application.values.configmaps.default.data.DAGS_VERSION=${{ inputs.ref_name }}" \
-          --set "application.values.secrets.default.data.GH_ACCESS_TOKEN=${{ secrets.gh_access_token }}"
