change runs-on of e2e-test job

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -357,7 +357,7 @@ jobs:
   e2e-test:
     name: Run E2E test
     needs: [deploy]
-    runs-on: [self-hosted, linux, deployment, main]
+    runs-on: [self-hosted, linux, node-action-runner, main]
     if: ${{ inputs.code_lang == 'golang' }}
     continue-on-error: true
     steps:
